test/tests/stages/5_local_variables/valid/extra_credit/compound_plus.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[19]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(to_add)
  =
  const int(0)
  ;
  identifier(to_add)
  +=
  const int(4)
  ;
  return
  identifier(to_add)
  ;
  }
