test/tests/stages/5_local_variables/invalid_parse/invalid_variable_name.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[15]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  const int(10)
  =
  const int(0)
  ;
  return
  const int(10)
  ;
  }
